--- a/app/views/admin/topics/_form.html.erb
+++ b/app/views/admin/topics/_form.html.erb
@@ -65,5 +65,5 @@
 		</tr>
 	</tbody>
 </table>
-<input type="hidden" name="page" value="<%= params[:page] %>" />
+<input type="hidden" name="page" value="<%= @page %>" />
 <% end %>
