--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
 					<a href="/sale"><%= _t 'base.sale' %></a>
 					<div class="subbox">
 						<div class="item"><a href="/sale"><%= _t 'base.shoppingcenter' %></a></div>
-						<div class="item"><a href="/shop"><%= _t 'base.online' %></a></div>
+						<div class="item"><a href="/shop"><%= _t 'base.shop' %></a></div>
 					</div>
 				</li>
 				<li class="li_02">
