--- a/app/views/services/download.html.erb
+++ b/app/views/services/download.html.erb
@@ -18,13 +18,13 @@
 
 </script>
 <div class="location">
-	<a href="/">首页</a><a href="/service">服务支持</a><span>资料下载</span>
+	<a href="/"><%= _t "location.index" %></a><a href="/service"><%= _t "location.service" %></a><span><%= _t "location.downloads" %></span>
 </div>
 <div class="clear"></div>
 <div class="content_box faq">
 	<div class="ser_action">
 		<div class="faq_title">
-			<h1>资料下载</h1>
+			<h1><%= _t "location.downloads" %></h1>
 		</div>
 		<div class="down_list">
 			<div class="down_title">
