--- a/app/views/about/about.html.erb
+++ b/app/views/about/about.html.erb
@@ -1,5 +1,5 @@
 <div class="location">
-	<a href="/" title="<%= _t "location.index" %>"><%= _t "location.index" %></a><%= location(@cat) %><span><% if !session[:locale].blank? && session[:locale] != 'zh' %><%= @intro.en_title %><% else %><%= @intro.title %><% end %></span>
+	<a href="/"><%= _t "location.index" %></a><%= location(@cat) %><span><% if !session[:locale].blank? && session[:locale] != 'zh' %><%= @intro.en_title %><% else %><%= @intro.title %><% end %></span>
 </div>
 <div class="clear"></div>
 <div class="content_box faq">
