--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -50,7 +50,7 @@ $(function(){
 	}
 </script>
 <div class="location">
-	<a href="/">首页</a><a href="/service">服务支持</a><span>故障报修</span>
+	<a href="/"><%= _t "location.index" %></a><a href="/service"><%= _t "location.service" %></a><span><%= _t "location.faults" %></span>
 </div>
 <div class="clear"></div>
 <div class="content_box service">
