--- a/app/views/admin/product_features/index.html.erb
+++ b/app/views/admin/product_features/index.html.erb
@@ -25,8 +25,8 @@
 		<tr>
 			<td><%= i + 1 %></td>
 			<td><img src="<%= product_feature.img_url %>" /></td>
-			<td><%= product_feature.title %></td>
-			<td><%= product_feature.info %></td>
+			<td><%= product_feature.title.gsub('$$$', "<br />").html_safe %></td>
+			<td style="text-align:left;"><%= product_feature.info.gsub('$$$', "<br />").html_safe %></td>
 			<td>				
 				<a href="/admin/products/<%= @product.id %>/product_features/<%= product_feature.id %>/edit">修改</a>|<%= link_to "删除", {:action => "destroy", :id => product_feature}, :confirm => "确定删除？", :method => "delete" %>
 			</td>
