--- a/app/views/admin/products/specifications.html.erb
+++ b/app/views/admin/products/specifications.html.erb
@@ -22,12 +22,15 @@
 				<%= @product.title %>
 			</td>
 		</tr>
-		<% ["电源", "水温", "水温加热功率", "暖风温度", "暖风加热功率", "座圈加热功率", "水箱容积", "适用水压", "冲洗流量", "女性清洗水量", "排水方式", "坑距", "冲水方式"].each_with_index do |s, i|%>
+		<% 
+			@product_params.each_with_index do |param, i|
+				arr = param.title.split('$$$') 
+		%>
 		<tr>
-			<td class="data_label"><%= s %>：</td>
+			<td class="data_label"><%= arr[0] %>：</td>
 			<td class="data_ipt">
-				<input type="hidden" name="s[k][<%= i %>]" value="<%= s %>" />
-				<input type="text" name="s[v][<%= i %>]" value="<%= info[s] %>" />
+				<input type="hidden" name="s[k][<%= i %>]" value="<%= param.mark %>" />
+				<input type="text" name="s[v][<%= i %>]" value="<%= info[param.mark] %>" />
 			</td>
 		</tr>
 		<% end %>
