--- a/app/views/admin/product_params/_form.html.erb
+++ b/app/views/admin/product_params/_form.html.erb
@@ -11,7 +11,7 @@
 <table class="newtable">
 	<thead>
 		<tr>
-			<th colspan="2"><%= @product_catalog.name %> <%= t %>参数</th>
+			<th colspan="2"><%= @product_catalog.show_name("zh") %> <%= t %>参数</th>
 		</tr>
 	</thead>
 	<tbody>
