--- a/app/views/account/main.html.erb
+++ b/app/views/account/main.html.erb
@@ -54,7 +54,7 @@
 					<li><a href="/admin/faqs" title="常见问题" target="main">常见问题</a></li>
 					<li><a href="/admin/sys/flashpics" title="首页图片轮播" target="main">首页图片轮播</a></li>
 					<li><a href="/admin/sys/index_ads" title="首页图片广告" target="main">首页图片广告</a></li>
-					<li><a href="/admin/friendlinks" title="友情链接" target="main">友情链接</a></li>
+					<!--li><a href="/admin/friendlinks" title="友情链接" target="main">友情链接</a></li-->
 					<li><a href="/admin/kfs" title="在线客服" target="main">在线客服</a></li>
 				</ul>
 			</div>
