--- a/app/views/admin/sales/_form.html.erb
+++ b/app/views/admin/sales/_form.html.erb
@@ -16,115 +16,35 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="data-leg">旗舰店：</td>
-			<td>&nbsp;</td>
+			<td class="data_label">办事处：</td>
+			<td class="data_ipt">
+				<input type="text" name="sale[name]" value="<%= @info["name"] %>" />
+			</td>
 		</tr>
 		<tr>
 			<td class="data_label">地址：</td>
 			<td class="data_ipt">
-				<input type="text" name="sale[a][addr]" value="<%= @info["a"]["addr"] %>" />
+				<input type="text" name="sale[addr]" value="<%= @info["addr"] %>" />
 			</td>
 		</tr>
 		<tr>
 			<td class="data_label">电话：</td>
 			<td class="data_ipt">
-				<input type="text" name="sale[a][phone]" value="<%= @info["a"]["phone"] %>" />
+				<input type="text" name="sale[tel]" value="<%= @info["tel"] %>" />
 			</td>
 		</tr>
 		<tr>
 			<td class="data_label">QQ：</td>
 			<td class="data_ipt">
-				<input type="text" name="sale[a][qq]" value="<%= @info["a"]["qq"] %>" />
+				<input type="text" name="sale[qq]" value="<%= @info["qq"] %>" />
+				&nbsp;&nbsp;多个以 “###” 隔开
 			</td>
 		</tr>
 		<tr>
 			<td class="data_label">MSN：</td>
 			<td class="data_ipt">
-				<input type="text" name="sale[a][msn]" value="<%= @info["a"]["msn"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data-leg">经销商：</td>
-			<td>&nbsp;</td>
-		</tr>
-		<tr>
-			<td class="data_label">地址：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[b][addr]" value="<%= @info["b"]["addr"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data_label">电话：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[b][phone]" value="<%= @info["b"]["phone"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data_label">QQ：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[b][qq]" value="<%= @info["b"]["qq"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data_label">MSN：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[b][msn]" value="<%= @info["b"]["msn"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data-leg">分销商：</td>
-			<td>&nbsp;</td>
-		</tr>
-		<tr>
-			<td class="data_label">地址：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[c][addr]" value="<%= @info["c"]["addr"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data_label">电话：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[c][phone]" value="<%= @info["c"]["phone"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data_label">QQ：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[c][qq]" value="<%= @info["c"]["qq"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data_label">MSN：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[c][msn]" value="<%= @info["c"]["msn"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data-leg">大卖场：</td>
-			<td>&nbsp;</td>
-		</tr>
-		<tr>
-			<td class="data_label">地址：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[d][addr]" value="<%= @info["d"]["addr"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data_label">电话：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[d][phone]" value="<%= @info["d"]["phone"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data_label">QQ：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[d][qq]" value="<%= @info["d"]["qq"] %>" />
-			</td>
-		</tr>
-		<tr>
-			<td class="data_label">MSN：</td>
-			<td class="data_ipt">
-				<input type="text" name="sale[d][msn]" value="<%= @info["d"]["msn"] %>" />
+				<input type="text" name="sale[msn]" value="<%= @info["msn"] %>" />
+				&nbsp;&nbsp;多个以 “###” 隔开
 			</td>
 		</tr>
 		<tr>
