--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -1,5 +1,5 @@
 <div class="location">
-	<a href="/"><%= _t "location.index" %></a><span><%= _t "location.sale" %></span>
+	<a href="/"><%= _t "location.index" %></a><a href="/sale"><%= _t "location.sale" %></a><span><%= _t "location.sale_civil" %></span>
 </div>
 <div class="clear"></div>
 <div class="content_box sale">
