--- a/app/views/admin/product_params/index.html.erb
+++ b/app/views/admin/product_params/index.html.erb
@@ -1,7 +1,7 @@
 <div class="nav">
 	<div class="list-opts">
 		<div class="nav-links">
-			<a href="/admin/product_catalogs/<%= @product_catalog.id %>/product_params"><%= @product_catalog.name %> 全部参数</a>
+			<a href="/admin/product_catalogs/<%= @product_catalog.id %>/product_params"><%= @product_catalog.show_name("zh") %> 全部参数</a>
 			<a href="/admin/product_catalogs/<%= @product_catalog.id %>/product_params/new">添加参数</a>
 		</div>
 	</div>
