--- a/app/views/admin/admins/edit.html.erb
+++ b/app/views/admin/admins/edit.html.erb
@@ -1,10 +1,1 @@
-<%= form_for [:admin, @admin] do |f| %>
-<table class="newtable">
-	<thead>
-		<tr>
-			<th colspan="2">修改</th>
-		</tr>
-	</thead>
-	<%= render :partial => 'form', :locals => { :f => f } %>
-</table>
-<% end %>
+<%= render :partial => 'form', :locals => { :t => "修改" } %>
